chỉnh sửa file thực hành tạo danh sách

--- a/taodanhsach.html
+++ b/taodanhsach.html
@@ -30,7 +30,7 @@
             <li>Beijing</li>
             <li>Chongqing</li>
             <li>Shanghai</li>
-            <li></li>
+            <li>Tianjin</li>
         </ol>
     </li>
 </ul>
